--- a/Source/CriticalPath.Web/Views/Account/Login.cshtml
+++ b/Source/CriticalPath.Web/Views/Account/Login.cshtml
@@ -1,6 +1,7 @@
 ﻿@using OzzIdentity.Models
 @model LoginViewModel
 @{
+    Layout = "~/Views/Shared/_BaseLayout.cshtml";
     ViewBag.Title = OzzIdentity.Resources.TitleStrings.Login;
 }
 
