--- a/Source/CriticalPath.Web/Views/Account/Register.cshtml
+++ b/Source/CriticalPath.Web/Views/Account/Register.cshtml
@@ -1,6 +1,7 @@
 ﻿@model OzzIdentity.Models.RegisterViewModel
 @{
     ViewBag.Title = OzzIdentity.Resources.TitleStrings.Register;
+    Layout = "~/Views/Shared/_BaseLayout.cshtml";
 }
 <div class="row">
     <div class="col-lg-offset-1 col-sm-9 col-md-8 col-lg-7">
