--- a/Source/CriticalPath.Web/Content/tools.css
+++ b/Source/CriticalPath.Web/Content/tools.css
@@ -27,8 +27,10 @@
  * Margin & Padding Left
  ***************************/
 .ml0 { margin-left: 0 !important; }
-.ml1 {margin-left:1px !important;}
-.ml2 {margin-left:2px !important;}
+.ml1 { margin-left:1px !important;}
+.ml2 { margin-left:2px !important;}
+.ml3 { margin-left: 3px !important; }
+.ml4 { margin-left: 4px !important; }
 .ml5 { margin-left: 5px !important; }
 .ml10 { margin-left: 10px !important; }
 .ml15 { margin-left: 15px !important; }
@@ -39,6 +41,10 @@
 .ml40 { margin-left: 40px !important; }
 
 .pl0 { padding-left: 0 !important; }
+.pl1 { padding-left:1px !important;}
+.pl2 { padding-left:2px !important;}
+.pl3 { padding-left: 3px !important; }
+.pl4 { padding-left: 4px !important; }
 .pl5 { padding-left: 5px !important; }
 .pl10 { padding-left: 10px !important; }
 .pl15 { padding-left: 15px !important; }
@@ -52,8 +58,8 @@
  * Margin & Padding Top
  ***************************/
 .mt0 { margin-top: 0 !important; }
-.mt1 {margin-top:1px !important;}
-.mt2 {margin-top:2px !important;}
+.mt1 { margin-top:1px !important;}
+.mt2 { margin-top:2px !important;}
 .mt5 { margin-top: 5px !important; }
 .mt10 { margin-top: 10px !important; }
 .mt15 { margin-top: 15px !important; }
@@ -81,8 +87,10 @@
  * Margin & Padding Right
  ***************************/
 .mr0 { margin-right: 0 !important; }
-.mr1 {margin-right:1px !important;}
-.mr2 {margin-right:2px !important;}
+.mr1 { margin-right:1px !important;}
+.mr2 { margin-right:2px !important;}
+.mr3 { margin-right: 3px !important; }
+.mr4 { margin-right: 4px !important; }
 .mr5 { margin-right: 5px !important; }
 .mr10 { margin-right: 10px !important; }
 .mr15 { margin-right: 15px !important; }
@@ -93,7 +101,11 @@
 .mr40 { margin-right: 40px !important; }
 
 .pr0 { padding-right: 0 !important; }
-.pr5 { padding-right: 5px !important; }
+.pr1 { padding-right:1px !important;}
+.pr2 { padding-right:2px !important;}
+.pr3 { padding-right:3px !important; }
+.pr4 { padding-right:4px !important; }
+.pr5 { padding-right:5px !important; }
 .pr10 { padding-right: 10px !important; }
 .pr15 { padding-right: 15px !important; }
 .pr20 { padding-right: 20px !important; }
@@ -134,3 +146,44 @@
  .fontWeigthBolder { font-weight:bolder; }
  .fontWeigthNormal { font-weight:normal; }
  .fontWeigthLight { font-weight:lighter}
+
+.fontSize25pc{
+    font-size: 25%;
+}
+.fontSize30pc{
+    font-size: 30%;
+}
+.fontSize40pc{
+    font-size: 40%;
+}
+.fontSize50pc{
+    font-size: 50%;
+}
+.fontSize60pc{
+    font-size: 60%;
+}
+.fontSize75pc{
+    font-size: 75%;
+}
+ 
+.fontSize80pc{
+    font-size: 80% !important;
+}
+.fontSize90pc{
+    font-size: 90% !important;
+}
+.fontSize100pc{
+    font-size: 100% !important;
+}
+.fontSize125pc{
+    font-size: 120% !important;
+}
+.fontSize150pc{
+    font-size: 150% !important;
+}
+.fontSize175pc{
+    font-size: 175% !important;
+}
+.fontSize200pc{
+    font-size: 200% !important;
+}
