--- a/Source/CriticalPath.Web/Views/PurchaseOrders/Index.cshtml
+++ b/Source/CriticalPath.Web/Views/PurchaseOrders/Index.cshtml
@@ -10,6 +10,7 @@
     bool canUserCreate = ViewBag.canUserCreate;
     bool canUserDelete = ViewBag.canUserDelete;
     bool canUserApprove = ViewBag.canUserApprove;
+    bool canUserCancelPO = ViewBag.canUserCancelPO;
 
     //Records & Pager
     int page = ViewBag.page;
@@ -34,7 +35,7 @@
     <table class="table table-hover">
         <tr>
             <th width="20px">@ActionStrings.Action</th>
-            <th width="20px">@Html.DisplayNameFor(model => model.IsApproved)</th>
+            <th>@Html.DisplayNameFor(model => model.IsApproved)</th>
             <th>@Html.DisplayNameFor(model => model.Product)</th>
             <th>@Html.DisplayNameFor(model => model.Customer)</th>
             <th>@Html.DisplayNameFor(model => model.OrderDate)</th>
@@ -56,23 +57,30 @@
                             {
                                 <li>@Html.ActionLink(ActionStrings.Edit, "Edit", new { id = item.Id })</li>
                             }
-                            @if (canUserDelete)
+                            @if (!item.IsApproved && canUserDelete)
                             {
                                 <li>
-                                    <a href="#deleteConfirm" data-toggle="modal" onclick="setDelete('<b>@(item.Title)</b>', @item.Id);">
+                                    <a href="#deleteConfirm" data-toggle="modal" onclick="setDelete('<b>@EntityStrings.OrderDate @item.OrderDate.ToShortDateString(), @EntityStrings.Product @item.Product.Title</b>', @item.Id);">
                                         @ActionStrings.Delete
                                     </a>
                                 </li>
                             }
-                            @if (!item.IsApproved && canUserApprove)
+                            @if (canUserCancelPO || (!item.IsApproved && canUserApprove))
                             {
                                 <li class="divider"></li>
+                            }
+                            @if (!item.IsApproved && canUserApprove)
+                            {
                                 <li>@Html.ActionLink(ActionStrings.Approve, "Approve", new { id = item.Id })</li>
+                            }
+                            @if (canUserCancelPO)
+                            {
+                                <li>@Html.ActionLink(ActionStrings.CancelPO, "CancelPO", new { id = item.Id })</li>
                             }
                         </ul>
                     </div>
                 </td>
-                <td>@Html.DisplayFor(modelItem => item.IsApproved)</td>
+                <td>@Html.DisplayFor(modelItem => item.IsApproved) <span class="approveText">@Html.DisplayFor(i => item.ApproveDate)</span></td>
                 <td>@Html.DisplayFor(modelItem => item.Product)</td>
                 <td>@Html.DisplayFor(modelItem => item.Customer)</td>
                 <td>@Html.DisplayFor(modelItem => item.OrderDate)</td>
