Admin/UsersController finished for now

--- a/Source/CriticalPath.Web/Areas/Admin/Views/Users/Edit.cshtml
+++ b/Source/CriticalPath.Web/Areas/Admin/Views/Users/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@using CriticalPath.Web.Areas.Admin.Models
 @using CriticalPath.Data.Resources
-@model UserEditVM
+@model UserAdminVM
 
 @{
     ViewBag.Title = ActionStrings.Edit;
