--- a/Source/CriticalPath.Web/Areas/Admin/Views/Users/Index.cshtml
+++ b/Source/CriticalPath.Web/Areas/Admin/Views/Users/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using OzzIdentity.Models
 @using CriticalPath.Data.Resources
 @using CriticalPath.Web.Areas.Admin.Models
-@model IEnumerable<UserEditVM>
+@model IEnumerable<UserAdminVM>
 @{
     ViewBag.Title = "Users";
     //Records & Pager
