--- a/Source/CriticalPath.Web/Views/PurchaseOrders/Approve.cshtml
+++ b/Source/CriticalPath.Web/Views/PurchaseOrders/Approve.cshtml
@@ -1,86 +1,49 @@
 ﻿@using CriticalPath.Web.Models
 @using CriticalPath.Data
 @using CP.i8n
-@model PurchaseOrder
+@model PurchaseOrderVM
 @{
     ViewBag.Title = ActionStrings.Approve;
 }
 <h2 class="mb20">@ViewBag.Title</h2>
 
-<div class="row">
-    <label class="control-label col-md-2 col-sm-3">
-        @Html.DisplayNameFor(model => model.OrderDate)
-    </label>
-    <div class="col-md-10 col-sm-9 fontSize125pc">
-        @Html.DisplayFor(m => m.OrderDate)
-    </div>
-</div>
-<div class="row">
-    <label class="control-label col-md-2 col-sm-3">
-        @Html.DisplayNameFor(model => model.Customer)
-    </label>
-    <div class="col-md-10 col-sm-9 fontSize150pc">
-        @Html.DisplayFor(m => m.Customer.CompanyName)
-    </div>
-</div>
-<div class="row">
-    <label class="control-label col-md-2 col-sm-3">
-        @Html.DisplayNameFor(model => model.Product.Title)
-    </label>
-    <div class="col-md-10 col-sm-9">
-        @Html.DisplayFor(m => m.Product.Title)
-    </div>
-</div>
-<div class="row">
-    <label class="control-label col-md-2 col-sm-3">
-        @Html.DisplayNameFor(model => model.Code)
-    </label>
-    <div class="col-md-10 col-sm-9">
-        @Html.DisplayFor(m => m.Code)
-    </div>
-</div>
-<div class="row">
-    <label class="control-label col-md-2 col-sm-3">
-        @Html.DisplayNameFor(model => model.Description)
-    </label>
-    <div class="col-md-10 col-sm-9">
-        @Html.DisplayFor(m => m.Description)
-    </div>
-</div>
-<div class="row">
-    <label class="control-label col-md-2 col-sm-3">
-        @Html.DisplayNameFor(model => model.Notes)
-    </label>
-    <div class="col-md-10 col-sm-9">
-        @Html.DisplayFor(m => m.Notes)
-    </div>
-</div>
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     @Html.HiddenFor(model => model.Id)
-    <div class="row">
-        <label class="control-label col-md-2 col-sm-3">
-            @Html.DisplayNameFor(model => model.DueDate)
-        </label>
-        <div class="col-lg-5 col-md-6 col-sm-7">
-            @Html.EditorFor(m => m.DueDate)
+    <div class="form-horizontal">
+        <div class="row">
+            <label class="control-label col-md-2 col-sm-3">
+                @Html.DisplayNameFor(model => model.OrderDate)
+            </label>
+            <div class="col-md-10 col-sm-9 fontSize125pc">
+                @Html.DisplayFor(m => m.OrderDate)
+            </div>
         </div>
-    </div>
-    <div class="row mt40">
-        <label class="control-label col-md-2 col-sm-3">
-            @Html.DisplayNameFor(model => model.IsApproved)
-        </label>
-        <div class="col-md-8 col-sm-8">
-            @Html.EditorFor(m => m.IsApproved)
+        @Html.Partial("_PoPartialEdit");
+        <div class="row">
+            <label class="control-label col-md-2 col-sm-3">
+                @Html.DisplayNameFor(model => model.DueDate)
+            </label>
+            <div class="col-lg-5 col-md-6 col-sm-7">
+                @Html.EditorFor(m => m.DueDate)
+            </div>
         </div>
-    </div>
-    <div class="row mt20">
-        <div class="col-md-offset-2 col-sm-offset-3 col-md-3 col-sm-4">
-            <input type="submit" value='@ActionStrings.Approve' class="btn btn-lg btn-success" />
+        <div class="row mt40">
+            <label class="control-label col-md-2 col-sm-3">
+                @Html.DisplayNameFor(model => model.IsApproved)
+            </label>
+            <div class="col-md-8 col-sm-8">
+                @Html.EditorFor(m => m.IsApproved)
+            </div>
         </div>
-        <div class="col-md-3 col-sm-3">
-            @Html.ActionLink(@ActionStrings.BackToIndex, "Index", null, new { @class = "btn btn-lg btn-warning pull-right" })
+        <div class="row mt20">
+            <div class="col-md-offset-2 col-sm-offset-3 col-md-3 col-sm-4">
+                <input type="submit" value='@ActionStrings.Approve' class="btn btn-lg btn-success" />
+            </div>
+            <div class="col-md-3 col-sm-3">
+                @Html.ActionLink(@ActionStrings.BackToIndex, "Index", null, new { @class = "btn btn-lg btn-warning pull-right" })
+            </div>
         </div>
     </div>
 }
